// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidatedInputIconToggle when initiated with the validationHTML prop renders as expected 1`] = `
<InputIconToggle
  content={
    <span
      className="input-icon-toggle input-icon-toggle--foo"
    >
      <span>
        mock content
      </span>
    </span>
  }
  iconType="foo"
  inputId="123"
/>
`;

exports[`ValidatedInputIconToggle when initiated without the validationHTML prop renders as expected 1`] = `
<InputIconToggle
  content={null}
  iconType="foo"
  inputId="123"
/>
`;
